[kursovoi] Refactoring and fixing bugs